2005-10-23  Helmut Eller  <heller@common-lisp.net>

	* swank-sbcl.lisp (make-stream-interactive): Spawn a thread to
	flush interactive streams in reasonably short intervals.  
	Remove the old backward-compatible threading implementation.

2005-10-21  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-start-swank-server): Avoid comint-send-input
	here as it seems to trigger a bug in ansi-color-for-commit-mode.

2005-10-18  Douglas Crosher <dcrosher@common-lisp.net>

	* swank.lisp (canonical-package-nickname): always return the
	package name as a STRING if found.  This restores the printing of
	package names as strings.

2005-10-17  Marco Baringer  <mb@bese.it>
	
	* swank.lisp (eval-in-emacs): Instead of taking a string and
	attempting to parse it emacs side the function now takes a form
	and converts it to a string internally. This should allow users of
	the function to not have to worry about quoting issues and emacs'
	different printed represenation for, among other things,
	characters.
	(process-form-for-emacs): New function. Converts a list into a
	string for passing to emacs.

	* slime.el (slime-eval-for-lisp): New API. This function now takes
	a single string, representing the form to evaluate, and uses
	emacs' read function to convert it into a form before eval'ing it.
	(slime-dispatch-event): The :eval event now passes a single
	string (instead of a string and something looking kind of like a
	form).

2005-10-15  Douglas Crosher <dcrosher@common-lisp.net>

	* swank-scl.lisp: Support for Scieneer Common Lisp.

	* swank-backend.lisp (*gray-stream-symbols*) Scieneer Common Lisp
	implements stream-line-length.

	* swank-loader.lisp: Support for Scieneer Common Lisp:
	(*sysdep-pathnames*) use swank-scl.
	(*impl ementation-features*) add :scl.
	(*os-features*) add :hpux.
	(*architecture-features*) add :amd64, :i686, :i486, :sparc64, :sparc,
	   :hppa64, and :hppa.

	* swank.lisp: (*canonical-package-nicknames*) use lowercase